fix: complete local unified platform startup and acceptance flow